# computer_vision_2

./: .gitignore  LICENSE  README.md
alphaBlend/: CMakeLists.txt  main.cpp
assignment2_cifar10_improved_cnn/: CMakeLists.txt  main.cpp
assignment3_ocr_on_invoice/: CMakeLists.txt  main.cpp
assignment_smileDetectionWithDlib/: CMakeLists.txt  Smile_Detection.cpp
bugEyeFilterWithDlib/: CMakeLists.txt  main.cpp
delaunayTriangulation/: CMakeLists.txt  main.cpp
delaunayTriangulationAnimation/: CMakeLists.txt  main.cpp
faceAveraging/: CMakeLists.txt
faceAveragingWithDlib/: CMakeLists.txt  main.cpp
faceMorphWithDlib/: CMakeLists.txt  main.cpp
faceRecogEnrollmentWithDlibResNet/: CMakeLists.txt  main.cpp
faceRecogEnrollmentWithOpenFace/: CMakeLists.txt  main.cpp
faceRecogTestWithDlibResNet/: CMakeLists.txt  main.cpp
faceRecogTestWithDlibResNet/data/models/: descriptors.csv
faceRecogTestWithOpenFace/: CMakeLists.txt  main.cpp
faceRecogTestWithOpenFace/data/models/: descriptors_openface.csv
faceSwappingWithDlib/: CMakeLists.txt  faceBlendCommon.hpp  main.cpp
facialAlignmentWithDlib/: CMakeLists.txt  faceBlendCommon.hpp  main.cpp
facialLandmarkDetectorWithDLib/: CMakeLists.txt  main.cpp  readme.md
imgClassCNNWithLibTorch/: CMakeLists.txt  main.cpp  read-mnist.h
imgClassFeedFwdNNWithLibTorch/: CMakeLists.txt  main.cpp
linear_regressionWithLibTorch/: CMakeLists.txt  main.cpp
project1_virtualmakeup_lips/: CMakeLists.txt  main.cpp
project2_doppelganger_celeb/: CMakeLists.txt  labelData.cpp  labelData.h  main.cpp
tesseract_ocr_sample/: CMakeLists.txt  main.cpp
trainingFacialLandmarkDectorWithDlib/: CMakeLists.txt  main.cpp
videoBugEyeFilterWithDlib/: CMakeLists.txt  main.cpp
warpTriangle/: CMakeLists.txt  main.cpp
webcamFacialLandmarkDectorStabiliserWithDlib/: CMakeLists.txt  main.cpp  renderFace.hpp
webcamFacialLandmarkDetectorWithDlib/: CMakeLists.txt  main.cpp
